[project]
name = "ComfyUI-LantentCompose"
description = "Interpolate sdxl latents using slerp with and without a mask. use with unsample nodes for best effect"
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/Apache0ne/ComfyUI-LantentCompose"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "apacheone"
DisplayName = "ComfyUI-LantentCompose"
Icon = ""
